crates/bitnet-sampling/tests/snapshots/snapshot_wave12__min_p_filter_skewed.snap
---
source: crates/bitnet-sampling/tests/snapshot_wave12.rs
expression: probs
---
[
    0.7,
    0.2,
    0.0,
    0.0,
]
