crates/bitnet-sampling/tests/snapshots/snapshot_wave12__min_p_filter_uniform.snap
---
source: crates/bitnet-sampling/tests/snapshot_wave12.rs
expression: probs
---
[
    0.25,
    0.25,
    0.25,
    0.25,
]
