crates/bitnet-sampling/tests/snapshots/snapshot_wave12__min_p_sampler_clamped_high.snap
---
source: crates/bitnet-sampling/tests/snapshot_wave12.rs
expression: s
---
MinPSampler {
    min_p: 1.0,
}
