crates/bitnet-sampling/tests/snapshots/snapshot_wave12__mirostat_reset.snap
---
source: crates/bitnet-sampling/tests/snapshot_wave12.rs
expression: s
---
MirostatSampler {
    tau: 3.0,
    eta: 0.2,
    mu: 6.0,
    rng: ChaCha8Rng {
        rng: BlockRng {
            core: ChaChaXCore {},
            result_len: 64,
            index: 1,
        },
    },
}
