crates/bitnet-sampling/tests/snapshots/snapshot_wave12__mirostat_sample_deterministic.snap
---
source: crates/bitnet-sampling/tests/snapshot_wave12.rs
expression: "format!(\"token_id={tok}\")"
---
token_id=85
