crates/bitnet-sampling/tests/snapshots/snapshot_wave12__mirostat_sample_twice_state_changes.snap
---
source: crates/bitnet-sampling/tests/snapshot_wave12.rs
expression: "format!(\"t1={t1} t2={t2}\")"
---
t1=42 t2=48
